--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "pydart_helen"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Helen Kershaw", email="hkershaw@ucar.edu" },
 ]
@@ -12,11 +16,11 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+"pandas=2.2.0"
+]
 
 [project.urls]
 Homepage = "https://github.com/hkershaw-brown/pyDART.git"
 Issues = "https://github.com/hkershaw-brown/pyDART.git/issues"
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
