update pyproject.toml to have ncar repo
note this packaging has been tested on testpypi but only with
https://github.com/hkershaw-brown/pyDART repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,6 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/hkershaw-brown/pyDART.git"
-Issues = "https://github.com/hkershaw-brown/pyDART.git/issues"
+Homepage = "https://github.com/NCAR/pyDARTdiags.git"
+Issues = "https://github.com/NCAR/pyDARTdiags/issues"
 
