--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "pandas>=2.2.0"
-    "numpy>=1.26"
+    "pandas>=2.2.0",
+    "numpy>=1.26",
     "plotly>=5.22.0"
 ]
 
