--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "pydart_helen"
-version = "0.0.1"
+name = "pydartdiags"
+version = "0.0.2"
 authors = [
   { name="Helen Kershaw", email="hkershaw@ucar.edu" },
 ]
@@ -26,3 +26,5 @@ dependencies = [
 Homepage = "https://github.com/NCAR/pyDARTdiags.git"
 Issues = "https://github.com/NCAR/pyDARTdiags/issues"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/obs_sequence", "src/plots"]
