--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pydartdiags"
-version = "0.0.3a"
+version = "0.0.3b"
 authors = [
   { name="Helen Kershaw", email="hkershaw@ucar.edu" },
 ]
