changed to setup tools for backend to enable editable pip installs
pyyaml is required

fixes #16

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "pydartdiags"
@@ -19,7 +19,8 @@ classifiers = [
 dependencies = [
     "pandas>=2.2.0",
     "numpy>=1.26",
-    "plotly>=5.22.0"
+    "plotly>=5.22.0",
+    "pyyaml>=6.0.2"
 ]
 
 [project.urls]
