--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: pip install pytest pytest-cov pandas>=2.2.0 numpy>=1.26 plotly>=5.22.0 pyyaml>=6.0.2
 
+      - name: Install pydartdiags
+        run: pip install .
+
       - name: Run tests
         run: pytest --cov
 
