--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install pydartdiags
         run: pip install .
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+
       - name: Run tests
         run: pytest --cov
 
