--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v4
+
+      - name: Install dependencies
+        run: pip install pytest pytest-cov 
         
       - name: Install pydartdiags
         run: python -m pip install .
