point pytest at the module and tests to run

--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -30,7 +30,7 @@ jobs:
         run: python -m pip install .
 
       - name: Run tests
-        run: pytest --cov
+        run: pytest --cov=pydartdiags tests/ 
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
