--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -35,5 +35,6 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
+          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/build/html
