pin black and code-cov actions to hash

--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: psf/black@stable
+      - uses: psf/black@8a737e727ac5ab2f1d4cf5876720ed276dc8dc4b # v25.1.0
         with:
           options: "--check --diff"
           src: "./src/pydartdiags"
