name the artifact

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -49,6 +49,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/build/html
+          name: github-pages
 
   deploy:
     name: Deploy to GitHub Pages
