--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "numpy>=1.26",
     "plotly>=5.22.0",
     "pyyaml>=6.0.2",
-    "matplotlib>=3.9.4"
+    "matplotlib>=3.9.4",
+    "dash>=3.1.1"
 ]
 
 [project.urls]
